--- a/hondelbankhome.html
+++ b/hondelbankhome.html
@@ -27,6 +27,7 @@
         document.addEventListener("DOMContentLoaded", function () {
         var navbar = document.getElementById("nav-bar");
         var header_nav_left = document.getElementById("header-nav-left");
+        var the_cancel_button = document.getElementById("the-cancel-button");
         function navbardisplay(){
             if(navbar.style.display === "block"){
                 sh = header_nav_left.style.display = "block";
@@ -37,18 +38,26 @@
             }
         }
         navbar.addEventListener("click", navbardisplay);
+
+        function cancelnav(){
+            if(navbar.style.display === "none"){
+                header_nav_left.style.display = "none";
+                navbar.style.display = "block";
+            }
+        }
+
+        the_cancel_button.addEventListener("click", cancelnav)
     });
         </script>
     </head>
     <style>
-        #loader
-{
-    position: fixed;
-    z-index: 9999999;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
+        #loader{
+            position: fixed;
+            z-index: 9999999;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
     background: url('https://unitedfinancialtrust.org/assets/loader.gif') 50% 50% no-repeat #f9f9f9;
 }
     </style>
@@ -57,8 +66,11 @@
         <div class="main">
             <div class="header-nav-left" id="header-nav-left">
                <div class="the-inside-nav"><br>
-                <div class="the-logo-nav0"><img src="hondelbank.jpg" width="100px" height="50px"></div>
-                <hr>
+                <div class="the-logo-nav0">
+                  <div class="img"> <img src="hondelbank.jpg" width="100px" height="50px"></div>
+                  <div class="the-cancel-button"><button id="the-cancel-button">X</button></div>
+                </div>
+                <hr style="clear: both;">
                 <div class="the-nav-item">
                     <a href="">
                         <div class="the-nav-item-inside-a">
