--- a/hondelbankhome.html
+++ b/hondelbankhome.html
@@ -68,7 +68,7 @@
                <div class="the-inside-nav"><br>
                 <div class="the-logo-nav0">
                   <div class="img"> <img src="hondelbank.jpg" width="100px" height="50px"></div>
-                  <div class="the-cancel-button"><button id="the-cancel-button">X</button></div>
+                  <div class="the-cancel-button"><button id="the-cancel-button"><span>X</span></button></div>
                 </div>
                 <hr style="clear: both;">
                 <div class="the-nav-item">
